Fix title button display on iPhone 5

--- a/www/src/js/views/timetable/TimetableActions.scss
+++ b/www/src/js/views/timetable/TimetableActions.scss
@@ -75,7 +75,7 @@
 
 .leftButtonGroup {
   justify-content: space-between;
-  min-width: 19rem;
+  min-width: 17rem;
 
   > * {
     width: calc(50% - 0.25rem);
